--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1566,6 +1566,14 @@
                     }
                 }
                 if (gameSelect) gameSelect.style.display = 'none';
+                // Move crawfordLabel to the right
+                const crawfordLabel = document.getElementById('crawfordLabel');
+                if (crawfordLabel) {
+                    crawfordLabel.style.position = 'absolute';
+                    crawfordLabel.style.right = '10px';
+                    crawfordLabel.style.left = 'auto';
+                    crawfordLabel.style.transform = 'none';
+                }
             }
 
             html2canvas(document.body, {
@@ -1588,6 +1596,20 @@
                 }
                 if (matchInfoDiv) {
                     matchInfoDiv.innerHTML = originalMatchInfoHTML;
+                }
+                // Restore crawfordLabel style
+                if (crawfordLabel) {
+                    crawfordLabel.style.position = '';
+                    crawfordLabel.style.right = '';
+                    crawfordLabel.style.left = '';
+                    crawfordLabel.style.transform = '';
+                }
+                // Restore crawfordLabel style
+                if (crawfordLabel) {
+                    crawfordLabel.style.position = '';
+                    crawfordLabel.style.right = '';
+                    crawfordLabel.style.left = '';
+                    crawfordLabel.style.transform = '';
                 }
 
                 canvas.toBlob(blob => {
@@ -1680,6 +1702,14 @@
                     }
                 }
                 if (gameSelect) gameSelect.style.display = 'none';
+                // Move crawfordLabel to the right
+                const crawfordLabel = document.getElementById('crawfordLabel');
+                if (crawfordLabel) {
+                    crawfordLabel.style.position = 'absolute';
+                    crawfordLabel.style.right = '10px';
+                    crawfordLabel.style.left = 'auto';
+                    crawfordLabel.style.transform = 'none';
+                }
             }
 
             html2canvas(document.body, {
