--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1560,7 +1560,8 @@
                 }
                 if (matchInfoDiv) {
                     if (matchPoint > 0) {
-                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center; position: relative;"><span>Матч до ${matchPoint}</span><span style="position: absolute; left: 50%; transform: translateX(-50%);">Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
+                        const crawfordVisible = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? 'visible' : 'hidden';
+                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center; position: relative;"><span>Матч до ${matchPoint}</span><span style="position: absolute; left: 50%; transform: translateX(-50%);">Счет: ${gameRedScore} - ${gameBlackScore}</span><span style="position: absolute; right: 0; visibility: ${crawfordVisible};">Кроуфорд</span></div>`;
                     } else {
                         matchInfoDiv.innerHTML = 'Манигейм';
                     }
@@ -1696,7 +1697,8 @@
                 }
                 if (matchInfoDiv) {
                     if (matchPoint > 0) {
-                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center; position: relative;"><span>Матч до ${matchPoint}</span><span style="position: absolute; left: 50%; transform: translateX(-50%);">Счет: ${gameRedScore} - ${gameBlackScore}</span></div>`;
+                        const crawfordVisible = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? 'visible' : 'hidden';
+                        matchInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center; position: relative;"><span>Матч до ${matchPoint}</span><span style="position: absolute; left: 50%; transform: translateX(-50%);">Счет: ${gameRedScore} - ${gameBlackScore}</span><span style="position: absolute; right: 0; visibility: ${crawfordVisible};">Кроуфорд</span></div>`;
                     } else {
                         matchInfoDiv.innerHTML = 'Манигейм';
                     }
