--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -1257,6 +1257,8 @@
                 if (current >= data.length - 1) {
                     if (currentGameNum < availableGames.length) {
                         currentGameNum++;
+                        let crawfordVisibility = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? 'visible' : 'hidden';
+                        document.getElementById('crawfordLabel').style.visibility = crawfordVisibility;
                         data = availableGames[currentGameNum - 1].turns;
                         current = 0;
                         updateGameSelect();
@@ -1371,6 +1373,8 @@
                                 pendingPrevGame = false;
                                 if (currentGameNum > 1) {
                                     currentGameNum--;
+                                    let crawfordVisibility = (enable_crawford_game_number && currentGameNum === enable_crawford_game_number) ? 'visible' : 'hidden';
+                                    document.getElementById('crawfordLabel').style.visibility = crawfordVisibility;
                                     data = availableGames[currentGameNum - 1].turns;
                                     current = data.length - 1;
                                     updateGameSelect();
